GPUS-Kubernetes/kubernetes-basics-to-advanced-main/gateway-api-demo/phase-3-production/multi-tenant/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a
  labels:
    tenant: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-b
  labels:
    tenant: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
