GPUS-Kubernetes/kubernetes-basics-to-advanced-main/gateway-api-demo/phase-3-production/multi-tenant/tenant-a-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: tenant-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: tenant-a
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 8080
