GPUS-Kubernetes/kubernetes-basics-to-advanced-main/gateway-api-demo/phase-3-production/multi-tenant/tenant-b-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-route
  namespace: tenant-b
spec:
  parentRefs:
  - name: shared-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - app2.34.57.15.204.nip.io
  rules:
  - backendRefs:
    - name: app2-svc
      port: 80
